--- a/external style.css
+++ b/external style.css
@@ -1,11 +1,41 @@
-<style>
-h1{font-family:arial;
-   font-size:150%;
-   font-style:italic;
-   color:red;}
+Docur
+
+color:red;}
+
+Pictur
+
 p{font-family:courier;
-  font-size:100%;
-  font-weight:none:
-  font-style:calibri:
-  color:blue;}
+
+<style>
+
+h1{font-family:arial;
+
+Quick a
+
+font-size: 150%;
+
+Deskt
+
+font-style:italic;
+
+dev c
+
+font-size: 100%;
+
+saves
+
+font-weight:none;
+
+WD-a
+
+font-style:calibri;
+
+Winde
+
+color:blue;}
+
+OneDri
+
+This PC
+
 </style>
